Fix "invisible menu" on some smaller layouts

--- a/src/less/_navigation.less
+++ b/src/less/_navigation.less
@@ -129,3 +129,7 @@
     }
   }
 }
+
+.bo-nav-sub-link {
+  color: @brand-secondary !important;
+}
